# CarAT

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yml  pyproject.toml  requirements.txt  tdi_value_chain.ipynb
.github/workflows/: flake8.yml  ruff.yml  run-tests.yml
carat/: __init__.py  chem_utils.py  setup.py  utils.py
carat/core/: __init__.py  boa.py  linear_program.md  lp_opt.py
carat/processing/: __init__.py  preprocessor.py
carat/vis/: __init__.py  sankey.py  vc_graph.py
data/: graph.pkl  tdi_anon_dict.pkl  tdi_anon_dict_new.pkl
src/carat/: __init__.py  chem_utils.py  setup.py  utils.py
src/carat/core/: __init__.py  boa.py  linear_program.md  lp_opt.py
src/carat/processing/: __init__.py  datatypes.py  preprocessor.py
src/carat/vis/: __init__.py  sankey.py  vc_graph.py
tests/: test_chem_utils.py  test_utils.py
